# finetune-Qwen2-VL

./: .gitignore  finetune.py  finetune_distributed.py  finetune_distributed.sh  hello.py  pyproject.toml  requirements.txt
json_outputs_train/: final_validation.json
train_output/20250121133207/: output.20250121133207.log.txt
train_output/20250123094821/: output.20250123094821.log.txt
train_output/20250128130700/: output.20250128130700.log.txt
train_output/20250128130834/: output.20250128130834.log.txt
train_output/20250128140316/: output.20250128140316.log.txt
train_output/20250128143342/: output.20250128143342.log.txt
train_output/20250128150918/: output.20250128150918.log.txt
