[project]
name = "finetune-qwen2-vl-mod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "psutil>=6.1.1",
    "python-dotenv>=1.0.1",
    "setups>=0.0.2",
    "setuptools>=75.8.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.1",
    "triton>=3.1.0",
]
